==> LacunaSpace/basicmac/target/arduino/hal/hal.cpp <==
#define _GNU_SOURCE 1 // For fopencookie
#include <stdio.h>
#include <Arduino.h>
#include <SPI.h>
#include "../basicmac.h"
#include "hal.h"

static void hal_io_init () {
    uint8_t i;
    // Checks below assume that all special pin values are >= LMIC_UNUSED_PIN, so check that.
    #if defined(BRD_sx1261_radio) || defined(BRD_sx1262_radio)
    LMIC_STATIC_ASSERT(LMIC_UNUSED_PIN < LMIC_CONTROLLED_BY_DIO3, "Unexpected constant values");
    LMIC_STATIC_ASSERT(LMIC_UNUSED_PIN < LMIC_CONTROLLED_BY_DIO2, "Unexpected constant values");
    #endif // defined(BRD_sx1261_radio) || defined(BRD_sx1262_radio)

    ASSERT(lmic_pins.nss < LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.rst <= LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.rx <= LMIC_UNUSED_PIN);

#if defined(BRD_sx1272_radio) || defined(BRD_sx1276_radio)
    //DIO0 is required, DIO1 is required for LoRa, DIO2 for FSK
    ASSERT(lmic_pins.dio[0] < LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.dio[1] < LMIC_UNUSED_PIN || lmic_pins.dio[2] < LMIC_UNUSED_PIN);

    ASSERT(lmic_pins.busy == LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.tcxo == LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.tx <= LMIC_UNUSED_PIN);
#elif defined(BRD_sx1261_radio) || defined(BRD_sx1262_radio)
    // Only DIO1 should be specified
    ASSERT(lmic_pins.dio[0] == LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.dio[1] < LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.dio[2] == LMIC_UNUSED_PIN);

    ASSERT(lmic_pins.busy <= LMIC_UNUSED_PIN);
    ASSERT(lmic_pins.tcxo == LMIC_UNUSED_PIN || lmic_pins.tcxo == LMIC_CONTROLLED_BY_DIO3);
    ASSERT(lmic_pins.tx <= LMIC_UNUSED_PIN || lmic_pins.tx == LMIC_CONTROLLED_BY_DIO2);
#else
    #error "Unknown radio type?"
#endif

    // Write HIGH to deselect (NSS is active low). Do this before
    // setting output, to prevent a moment of OUTPUT LOW on e.g. AVR.
    digitalWrite(lmic_pins.nss, HIGH);
    pinMode(lmic_pins.nss, OUTPUT);
    // Write HIGH again after setting output, for architectures that
    // reset to LOW when setting OUTPUT (e.g. arduino-STM32L4).
    digitalWrite(lmic_pins.nss, HIGH);

    if (lmic_pins.tx < LMIC_UNUSED_PIN)
        pinMode(lmic_pins.tx, OUTPUT);
    if (lmic_pins.rx < LMIC_UNUSED_PIN)
        pinMode(lmic_pins.rx, OUTPUT);
    if (lmic_pins.rst < LMIC_UNUSED_PIN)
        pinMode(lmic_pins.rst, OUTPUT);
    if (lmic_pins.busy < LMIC_UNUSED_PIN)
        pinMode(lmic_pins.busy, INPUT);
    if (lmic_pins.tcxo < LMIC_UNUSED_PIN)
        pinMode(lmic_pins.tcxo, OUTPUT);

    for (i = 0; i < NUM_DIO; ++i) {
        if (lmic_pins.dio[i] < LMIC_UNUSED_PIN)
            pinMode(lmic_pins.dio[i], INPUT);
    }
}

void hal_ant_switch (u1_t val) {
    // TODO: Support separate pin for TX2 (PA_BOOST output)
    if (lmic_pins.tx < LMIC_UNUSED_PIN)
        digitalWrite(lmic_pins.tx, val == HAL_ANTSW_TX || val == HAL_ANTSW_TX2);
    if (lmic_pins.rx < LMIC_UNUSED_PIN)
        digitalWrite(lmic_pins.rx, val == HAL_ANTSW_RX);
}

bool hal_pin_rst (u1_t val) {
    if (lmic_pins.rst >= LMIC_UNUSED_PIN)
        return false;

    if(val == 0 || val == 1) { // drive pin
        pinMode(lmic_pins.rst, OUTPUT);
        digitalWrite(lmic_pins.rst, val);
    } else { // keep pin floating
        pinMode(lmic_pins.rst, INPUT);
    }
    return true;
}

bool hal_pin_tcxo (u1_t val) {
    if (lmic_pins.tcxo >= LMIC_UNUSED_PIN)
        return false;

    digitalWrite(lmic_pins.tcxo, val);
    return true;
}

void hal_pin_busy_wait (void) {
    if (lmic_pins.busy >= LMIC_UNUSED_PIN) {
        // TODO: We could probably keep some state so we know the chip
        // is in sleep, since otherwise the delay can be much shorter.
        // Also, all delays after commands (rather than waking up from
        // sleep) are measured from the *end* of the previous SPI
        // transaction, so we could wait shorter if we remember when
        // that was.
        delayMicroseconds(MAX_BUSY_TIME);
    } else {
        unsigned long start = micros();

        while((micros() - start) < MAX_BUSY_TIME && digitalRead(lmic_pins.busy)) /* wait */;
    }
}

void hal_spi_select (int on) {
    if (on)
        SPI.beginTransaction(settings);
    else
        SPI.endTransaction();

    //Serial.println(val?">>":"<<");
    digitalWrite(lmic_pins.nss, !on);
}

void hal_debug_led (int val) {
    #ifdef LED_BUILTIN
    digitalWrite(LED_BUILTIN, val);
    #endif
}

void hal_init (void * /* bootarg */) {
    // configure radio I/O and interrupt handler
    hal_io_init();
    // configure radio SPI
    hal_spi_init();
    // configure timer and interrupt handler
    hal_time_init();
#if defined(LMIC_PRINTF_TO)
    // printf support
    hal_printf_init();
#endif
#ifdef CFG_DEBUG
    hal_debug_init();
#endif
}
