==> LacunaSpace/basicmac/stm32/hal.c <==
#include "lmic.h"
#include "peripherals.h"
#include "bootloader.h"
#include "boottab.h"
#include "perso.h"
#include "eefs/eefs.h"
#include "pwrman/pwrman.h"

void hal_spi_select (int on) {
    if (on) {
        // enable clock for SPI interface 1
        SPIx_enable();
        // configure pins for alternate function SPIx (SCK, MISO, MOSI)
        CFG_PIN_AF(GPIO_SCK, GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_PDN);
        CFG_PIN_AF(GPIO_MISO, GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_PDN);
        CFG_PIN_AF(GPIO_MOSI, GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_PDN);
        // drive chip select low
        SET_PIN(GPIO_NSS, 0);
        CFG_PIN(GPIO_NSS, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
    } else {
        // stop driving chip select, activate pull-up
        CFG_PIN(GPIO_NSS, GPIOCFG_MODE_INP | GPIOCFG_PUPD_PUP);
        // put SCK, MISO, MOSI back to analog input (HiZ) mode
#if defined(BRD_sck_mosi_pulldown)
        CFG_PIN(GPIO_SCK, GPIOCFG_MODE_INP | GPIOCFG_PUPD_PDN);
        CFG_PIN(GPIO_MOSI, GPIOCFG_MODE_INP | GPIOCFG_PUPD_PDN);
#elif defined(BRD_sck_mosi_drivelow)
        SET_PIN(GPIO_SCK, 0);
        CFG_PIN(GPIO_SCK, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
        SET_PIN(GPIO_MOSI, 0);
        CFG_PIN(GPIO_MOSI, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
#else
        CFG_PIN_DEFAULT(GPIO_SCK);
        CFG_PIN_DEFAULT(GPIO_MOSI);
#endif
        CFG_PIN_DEFAULT(GPIO_MISO);
        // disable clock for SPI interface
        SPIx_disable();
    }
}

static void hal_io_init () {
#ifndef CFG_noradio
#if defined(GPIO_RX)
    SET_PIN_ONOFF(GPIO_RX, 0);
    CFG_PIN(GPIO_RX, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
#endif
#if defined(GPIO_TX)
    SET_PIN_ONOFF(GPIO_TX, 0);
    CFG_PIN(GPIO_TX, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
#endif
#if defined(GPIO_TX2)
    SET_PIN_ONOFF(GPIO_TX2, 0);
    CFG_PIN(GPIO_TX2, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
#endif
#ifdef GPIO_TXRX_EN
    SET_PIN_ONOFF(GPIO_TXRX_EN, 0);
    CFG_PIN(GPIO_TXRX_EN, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
#endif
#ifdef GPIO_DIO0
    IRQ_PIN(GPIO_DIO0, GPIO_IRQ_RISING);
#endif
#ifdef GPIO_DIO1
    IRQ_PIN(GPIO_DIO1, GPIO_IRQ_RISING);
#endif
#ifdef GPIO_DIO2
    IRQ_PIN(GPIO_DIO2, GPIO_IRQ_RISING);
#endif
#ifdef GPIO_DIO3
    IRQ_PIN(GPIO_DIO3, GPIO_IRQ_RISING);
#endif
#endif
}

bool hal_pin_tcxo (u1_t val) {
#if defined(GPIO_TCXO_PWR)
    if (val != 0) {
        SET_PIN(GPIO_TCXO_PWR, 1);
        CFG_PIN(GPIO_TCXO_PWR, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_400kHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
    } else {
        SET_PIN(GPIO_TCXO_PWR, 0);
        CFG_PIN_DEFAULT(GPIO_TCXO_PWR);
    }
    return true;
#else
    return false;
#endif
}

void hal_ant_switch (u1_t val) {
#ifdef SVC_pwrman
    static ostime_t t1;
    static int ctype;
    static uint32_t radio_ua;
    ostime_t now = hal_ticks();
    if( radio_ua ) {
        pwrman_consume(ctype, now - t1, radio_ua);
        radio_ua = 0;
    }
#endif
    if (val == HAL_ANTSW_OFF) {
#ifdef GPIO_TXRX_EN
        SET_PIN_ONOFF(GPIO_TXRX_EN, 0);
#endif
    } else {
#ifdef SVC_pwrman
        t1 = now;
        ctype = (val == HAL_ANTSW_RX) ? PWRMAN_C_RX : PWRMAN_C_TX;
        radio_ua = LMIC.radioPwr_ua;
#endif
#ifdef GPIO_TXRX_EN
        SET_PIN_ONOFF(GPIO_TXRX_EN, 1);
#endif
    }
#ifdef GPIO_RX
    SET_PIN_ONOFF(GPIO_RX, (val == HAL_ANTSW_RX));
#endif
#ifdef GPIO_TX
    SET_PIN_ONOFF(GPIO_TX, (val == HAL_ANTSW_TX));
#endif
#ifdef GPIO_TX2
    SET_PIN_ONOFF(GPIO_TX2, (val == HAL_ANTSW_TX2));
#endif
}

bool hal_pin_rst (u1_t val) {
    #ifdef GPIO_RST
    if(val == 0 || val == 1) { // drive pin
        SET_PIN(GPIO_RST, val);
        CFG_PIN(GPIO_RST, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_40MHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
    } else { // keep pin floating
        CFG_PIN(GPIO_RST, GPIOCFG_MODE_ANA | GPIOCFG_OSPEED_400kHz | GPIOCFG_OTYPE_OPEN | GPIOCFG_PUPD_NONE);
    }
    return true;
    #else
    return false;
    #endif
}

void hal_pin_busy_wait (void) {
#ifdef GPIO_BUSY
    CFG_PIN(GPIO_BUSY, GPIOCFG_MODE_INP | GPIOCFG_OSPEED_40MHz);

    while (GET_PIN(GPIO_BUSY) != 0);

    CFG_PIN_DEFAULT(GPIO_BUSY);
#endif
}

void hal_init (void* bootarg) {
    memset(&HAL, 0x00, sizeof(HAL));
    HAL.boottab = bootarg;
    HAL.battlevel = MCMD_DEVS_BATT_NOINFO;

    HAL.reset = RCC->CSR;
    RCC->CSR |= RCC_CSR_RMVF;

    ASSERT(HAL.boottab->version >= 0x105); // require bootloader v261

#ifdef BRD_borlevel
    setbrownout(BRD_borlevel);
#endif

    hal_disableIRQs();

    clock_init();

    pd_init();

#if 1
    // disable single-wire debug (SWD) when running
    CFG_PIN_DEFAULT(BRD_GPIO(PORT_A, 13));
    CFG_PIN_DEFAULT(BRD_GPIO(PORT_A, 14));
#endif

#if defined(CFG_wailmer_board) || defined(CFG_wailord_board) || defined(CFG_coxproto_board) || defined(CFG_itrack_board)
    // ensure GNSS is turned off (there is no external pull-down on load switch control line)
    CFG_PIN(GPIO_GNSS_EN, GPIOCFG_MODE_OUT | GPIOCFG_OSPEED_400kHz | GPIOCFG_OTYPE_PUPD | GPIOCFG_PUPD_NONE);
    SET_PIN(GPIO_GNSS_EN, 0);
#endif

    // configure radio I/O and interrupt handler
    hal_io_init();
    // configure radio SPI
    hal_spi_init();
    // configure timer and interrupt handler
    time_init();

    hal_enableIRQs();

    leds_init();
#ifdef BRD_USART
    usart_init();
#endif
#ifdef BRD_VIBE_TIM
    vibe_init();
#endif

#if defined(CFG_perso)
    perso_enter();
#endif

#ifdef CFG_DEBUG
    debug_init();
#endif

#if defined(SVC_eefs)
    eefs_init((void*) APPDATA_BASE, APPDATA_SZ);
#endif
}

void hal_debug_led (int val) {
#if defined(GPIO_DBG_LED)
    leds_set(GPIO_DBG_LED, val);
#endif
}
